swagger api clients
